--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
     Moment Juara
     <audio controls>
     <source src="Music/1.mp3" >
-</audio
+</audio>
 <br/>
 <br/>
 			   <div class="tags center">
@@ -45,6 +45,6 @@
                 </div> 
   </div>
 <footer>
-<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="beans.html">Home</a></span></nav>
+<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="Index.html">Home</a></span></nav>
 </footer></body>
 </html>
