--- a/artikel2.html
+++ b/artikel2.html
@@ -58,6 +58,6 @@ Pipa ialah alat atau benda yang digunakan sebagai tempat air mengalir dari satu 
 
   </div>
 <footer>
-<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="beans.html">Home</a></span></nav>
+<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="Index.html">Home</a></span></nav>
 </footer></body>
 </html>
