--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
   </div>
 <footer>
-<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="Index.html">Home</a></span></nav>
+<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="index.html">Home</a></span></nav>
 </footer></body>
 </html>
 
