--- a/artikel1.html
+++ b/artikel1.html
@@ -74,6 +74,6 @@ Kebiasaan baik, kenapa saya masukan point ini dan kenapa taroh dipaling awal, ap
 
   </div>
 <footer>
-<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="Index.html">Home</a></span></nav>
+<nav><img src="images/hak cipta.png" width="200" height="33.6"></a> <span><a href="index.html">Home</a></span></nav>
 </footer></body>
 </html>
