--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
     </div>
 	<h1><font size="4">Moment Juara</font></h1>
 	<audio controls>
-		<source src="music/1.mp3" type="audio/mpeg" />
+		<source src="Music/1.mp3" type="audio/mpeg" />
 	</audio>
 </audio>
 <br/>
